# inkplate10-aranet4

./: .gitignore  Aranet4_WiFi_Display.ino  Cargo.toml  README.md
Aranet4_Thin_Client/: Aranet4_Thin_Client.ino  config.h.example
aranet4-server/: Cargo.toml
aranet4-server/examples/: scanner.rs
aranet4-server/migrations/: 20250101000000_initial_schema.sql
aranet4-server/src/: main.rs
aranet4-server/static/: index.html
