[workspace]
members = ["aranet4-server"]
resolver = "2"

[workspace.dependencies]
# HTTP server
axum = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Bluetooth
btleplug = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.5"
uuid = "1.0"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate"] }
